==> kholia/Si5351-Pi-Pico/si5351.c <==
#include "si5351.h"
#include <stdint.h>
#define I2C0_SDA 12
#define I2C0_SCL 13

uint8_t si5351_write_bulk(uint8_t regAddr, uint8_t length, uint8_t *data) {
  int num_bytes_read = 0;
  uint8_t msg[length + 1];

  // Append register address to front of data packet
  msg[0] = regAddr;
  for (int i = 0; i < length; i++) {
    msg[i + 1] = data[i];
  }

  // Write data to register(s) over I2C
  i2c_write_blocking(i2c0, i2c_bus_addr, msg, (length + 1), false);

  return num_bytes_read;
}

uint8_t si5351_read(uint8_t regAddr) {
  uint8_t buf;

  i2c_write_blocking(i2c0, i2c_bus_addr, &regAddr, 1, true);
  i2c_read_blocking(i2c0, i2c_bus_addr, &buf, 1, false);

  return buf;
}
